CroNet: Allow null strings in config when creating a UrlRequestContextConfig.

BUG=599331

Review URL: https://codereview.chromium.org/1850573003

Cr-Commit-Position: refs/heads/master@{#384355}

Former-commit-id: 1d9c5cae125a244f561276d2e8824dd2ec04dcdc